# Caborn_Test_bot

tradeing-bot-main/: .gitignore  DEBUG_REPORT_FIXES_APPLIED.md  DEPLOYMENT_GUIDE.md  GOLD_MARGIN_EXPLAINED.md  config.py  err.logs.txt  forex-gold-short-overview.txt  main.py  mt5_bot.py  pip_freeze.txt  pyproject.toml  rate.txt  revert_callback.py
tradeing-bot-main/handlers/: admin_handler.py  callback_handler.py  mexc_handler.py  mt5_handler.py  registration_handler.py  start_handler.py  trading_handler.py  user_settings_handler.py  welcome_messages.py
tradeing-bot-main/mt5/: metaapi_manager.py  mt5_config.py  mt5_core.py  mt5_crash_protection.py  mt5_signals.py
tradeing-bot-main/trading/: client_factory.py  config.py  crash_protection.py  future_trading.py  mexc_client_factory.py  mexc_future_trading.py
tradeing-bot-main/user_control/: add_users.py
tradeing-bot-main/utils/: bg_loop.py  cleanup_utils.py  logging_examples.py  logging_service.py  precision.py  rate_limiter.py  status_monitor.py
